syntax = "proto3";

package likes;

service LikesService {
    rpc AddLike (AddLikeDTO) returns (stream Like);
}

message Like {
    string id = 1;
    LikeType type = 2;
    string item_id = 3;
    string user_id = 4;
    string createdAt = 5;
    LikeState state = 6;
}

message AddLikeDTO {
    string user_id = 1;
    string item_id = 2;
    LikeType type = 3;
}

enum LikeType {
    USER = 0;
    STORY = 1;
    POST = 2;
    COMMENT = 3;
    MESSAGE = 4;
}
enum LikeState {
    NOT_ACTIVE = 0;
    ACTIVE = 1;
}
